# yookye_replit_check_point_2

./: .gitignore  .replit  README.md  package-lock.json  package.json  pyproject.toml  vite.config.ts
__server/: storage.ts
attached_assets/: Pasted--Attempting-to-decode-token-with-SECRET-KEY-yoo-PyJWT-decode-failed-Signature-verification-fa-1746452189994.txt  Pasted--JSON-creato-con-successo-accomodation-Roma--1745931479059.txt  Pasted--id-pacchetto-pacchetto-1-hotels-selezionati-roma--1747988559641.txt  Pasted--npm-run-dev-rest-express-1-0-0-dev-NODE-ENV-development-python-python-server-run-py-INF-1745929284147.txt  Pasted--openapi-3-1-0-info-title-Virtual-Expert-API-description-API-for-Yookye-travel-accommo-1745937655501.txt  Pasted-ERROR-python-server-api-travel-packages-Errore-nel-recupero-dei-pacchetti-per-categoria-Storia-e-Art-1745919186748.txt  Pasted-INFO-opensearch-POST-http-localhost-9200-travel-packages-search-size-100-status-200-request-0-02-1745919107611.txt  Pasted-INFO-python-server-app-Serving-index-html-for-path-bookings-INFO-werkzeug-127-0-0-1-23-May-20-1747987120914.txt  Pasted-INFO-python-server-middleware-Richiesta-a-api-saved-packages-con-metodo-GET-WARNING-opensearch-POS-1747987506851.txt  Pasted-INFO-werkzeug-127-0-0-1-05-May-2025-17-48-40-GET-api-saved-packages-HTTP-1-1-500-Traceba-1746460186193.txt  Pasted-INFO-werkzeug-127-0-0-1-29-Apr-2025-11-20-44-POST-api-login-HTTP-1-1-500-Traceback-most-1745918468307.txt  Pasted-INFO-werkzeug-127-0-0-1-29-Apr-2025-11-22-09-POST-api-login-HTTP-1-1-500-Traceback-most-1745918548933.txt  output_pacchetto.txt  (+16 more)
(+48 files in other folders)
